@@ -1,3 +1,9 @@
+2015-11-09  Eric Botcazou  <ebotcazou@adacore.com>
+
+	PR middle-end/68259
+	* tree.h (reverse_storage_order_for_component_p) <COMPONENT_REF>:
+	Check that the type of the first operand is an aggregate type.
+
 2015-11-09  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* omp-low.c: Fix some OpenACC comment typos.
